[metadata]
name = setisim
version = 0.1.0
author = Avinash Kumar
author_email = avialxee@gmail.com
description = a python based package for Synthesis Imaging using CASA for SETI. Spectral Imaging for uGMRT data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/avialxee/setisim
project_urls =
    Bug Tracker = https://github.com/avialxee/setisim/issues
[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src